# ROS2_jazzy_BOT-gzsim-rviz2

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: display_robot_model.rviz  gazebo_bridge.yaml  slam_toolbox_params.yaml
images/: simple_world.pgm
launch/: display_robot.launch.py
urdf/first_bot/: first_robot.gv  first_robot.urdf  first_robot.xacro
urdf/fishbot/: base.urdf.xacro  fishbot.urdf.xacro
urdf/fishbot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
urdf/fishbot/plugins/: fishbot_base_gazebo.xacro  fishbot_sensor_plugin.xacro
urdf/fishbot/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
worlds/: test.sdf  warehouse_world.sdf
